align badges with fixed-width right float, minimal html

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -83,6 +83,10 @@ h3 {
   width:90px;
   margin-left:5px
 }
+.badges::after {
+  content: "";
+  clear: both;
+}
 
 @media print, screen and (max-width: 960px) {
 
